V1.5.0 All knowing bugs because of merge are fixed 1.notification icon 2.calendar pill colour 3.exercise not showing

--- a/Minister_Of_Health/Components/Pages/CalendarEventPages/Index.razor.css
+++ b/Minister_Of_Health/Components/Pages/CalendarEventPages/Index.razor.css
@@ -46,7 +46,7 @@
     margin-right: 8px;
 }
 
-    .dot.work {
+    .dot.workinghours {
         background: #007aff;
     }
 
@@ -55,6 +55,10 @@
     }
 
     .dot.hobby {
+        background: #34c759;
+    }
+
+    .dot.exercise {
         background: #34c759;
     }
 
@@ -160,17 +164,22 @@
     border: 1px solid transparent;
 }
 
-    .event-pill.work {
-        background: #e7f3ff;
-        color: #007aff;
-    }
-
     .event-pill.meetings {
         background: #f3eaff;
         color: #6f42c1;
     }
 
     .event-pill.hobby {
+        background: #eafaf1;
+        color: #34c759;
+    }
+
+    .event-pill.exercise {
+        background: #eafaf1;
+        color: #34c759;
+    }
+
+    .event-pill.workinghours {
         background: #eafaf1;
         color: #34c759;
     }
